--- a/mf.html
+++ b/mf.html
@@ -249,8 +249,9 @@
                     </picture>
                     <!-- <div class="card-1 "></div> -->
                     <div class="c size font">Microsoft 365</div>
-                    <div class="c">進階版 Office 應用程式、額外的雲端儲存空間、進階安全性等功能，全都在一個方便的訂閱中。</div>
-                    <a>最多可供 6 人使用&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;適合一人使用</a>
+                    <div class="c ">進階版 Office 應用程式、額外的雲端儲存空間、進階安全性等功能，全都在一個方便的訂閱中。</div>
+                    <a >最多可供 6 人使用</a>&emsp;&emsp;&emsp;&emsp;&emsp;
+                    <a class="six"> 適合 1 人使用</a>
 
 
 
@@ -263,7 +264,7 @@
 
                     <div class="c size font">Surface Laptop 4</div>
                     <div class="c">運用完美結合時尚外型、超薄設計、多工速度和增強效能的裝置，一手包辦。</div>
-                    <a>立即選購</a>
+                    <a >立即選購</a>
                 </div>
                 <div class="cardd">
                     <picture>
@@ -273,7 +274,7 @@
 
                     <div class="c size font">Microsoft Edge</div>
                     <div class="c">在您瀏覽時提供世界級的效能，以及更多的隱私、更充足的生產力與更高的價值。</div>
-                    <a> 立即下載</a>
+                    <a > 立即下載</a>
                 </div>
                 <div class="card-4">
                     <picture>
@@ -284,9 +285,10 @@
                     <div class="c  ml-2">加入 Xbox Game Pass Ultimate 或 PC Game Pass 只要 NT$30，解鎖數百款精彩遊戲。
                         此優惠僅適用於新訂閱者。
                     </div>
-                    <a class="ml-2">加入 PC Game Pass</a>
+                    <a class="ml-2 ">加入 PC Game Pass</a>
                     <br>
-                    <a class="ml-2">加入 Game Pass Ultimate</a>
+                    
+                    <a class="ml-2 mt-2">加入 Game Pass Ultimate</a>
 
                 </div>
 
@@ -345,7 +347,7 @@
                     <!-- <div class="card-fff mb-1 "></div> -->
                     <div class="size mb-1 font mt">Microsoft 365 商務版</div>
                     <div class="mb-1 "> 透過功能強大的應用程式提高生產力、聯繫和安全，始終領先一步。</div>
-                    <a>立即選購</a>
+                    <a >立即選購</a>
                 </div>
                 <div class="p-5">
                     <picture>
