--- a/mf.html
+++ b/mf.html
@@ -172,11 +172,14 @@
                             <source media="(max-width:1399)" srcset="">
                             <img width="100%" src="./img/VP5-1920x600.jfif" alt="">
                         </picture>
-                        <!-- <div class="lg-col">
-                            <div>Surface Pro 8</div>
+                        <div class="lg-col">
+                            <div class="pro-8">Surface Pro 8</div>
                             <div class="mt-2  inner-nav-box">運用更大的 13 吋觸控螢幕、更快的連線，以及提升的速度，成就更多。現在提供 Windows 11。</div>
-                            <div class="mt-1">深入了解</div>
-                        </div> -->
+                            <!-- <div class="mt-1"></div> -->
+                            <button class="
+rectangle mt-1 df jc align-c">深入了解</button>
+                            
+                        </div>
                     </div>
 
 
@@ -199,15 +202,15 @@
             <div class="container_2 df-wrap">
                 <div class="container_2-1 df-col jc align-c  ">
                     <div class="icon-1"></div>
-                    <div>選擇您的 Microsoft 365</div>
+                    <div class="blu">選擇您的 Microsoft 365</div>
                 </div>
                 <div class="container_2-1 df-col jc align-c ">
                     <div class="icon-2"></div>
-                    <div>選購 Surface 裝置</div>
+                    <div class="blu">選購 Surface 裝置</div>
                 </div>
                 <div class="container_2-1 df-col jc align-c">
                     <div class="icon-1"></div>
-                    <div>取得 Windows 11</div>
+                    <div class="blu">取得 Windows 11</div>
                 </div>
             </div>
 
