--- a/mf.html
+++ b/mf.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Microsoft365</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../fontawesome-free-6.1.1-web/css/all.css">
     <link rel="stylesheet" href="./css/fes.css">
     <link rel="SHORTCUT ICON" href="./img/favicon.ico" type="image/x-icon">
@@ -56,22 +57,27 @@
 
                 <div class="box nav-right bg-white">
                     <ul class="w-full">
-                        <li>所有Microsoft
+                        <li><span>所有Microsoft</span>
                             <label for="burger">☰</label>
                             <input type="checkbox" id="burger">
                             <ul class="ul-1">
                                 <ul class="ul-2">
-                                    <li>軟體</li>
-                                    <li>Windows 應用程式</li>
-                                    <li>OneDrive</li>
-                                    <li>Outlook</li>
-                                    <li>Skype</li>
-                                    <li>OneNote</li>
-                                    <li>Microsoft Teams</li>
+                                    
+                                    <label for="burger-1"><li>軟體</li></label>
+                                    <input type="checkbox" id="burger-1">
+                                    <ul class="ul-3">
+                                        <li>Windows 應用程式</li>
+                                        <li>OneDrive</li>
+                                        <li>Outlook</li>
+                                        <li>Skype</li>
+                                        <li>OneNote</li>
+                                        <li>Microsoft Teams</li>
+                                    </ul>
+
                                 </ul>
                                 <ul class="ul-2">
                                     <li>個人電腦和設備</li>
-                                    <li>選購 Xbox</li>
+                                    <li>選購 Xbox</li> 
                                     <li>電腦配件</li>
                                 </ul>
 
@@ -278,81 +284,85 @@
 
             </div>
         </section>
-        <section>
-            <picture>
-                <div class="  pic-top df jc align-c  ">
+        <div>
+            <section>
+                <picture>
+                    <div class="  pic-top df jc align-c  ">
 
-                    <source media="(max-width:540px)" srcset="./img/VP2-859x540.jpg">
-                    <source media="(max-width:860px)" srcset="./img/_VP3-1083x600.jpg">
-                    <source media="(max-width:1084px)" srcset="./img/Refresh-2_VP4-1260x600.jfif">
-                    <img class="pic " width="100%" src="./img/2_VP5-1596x600.jfif" alt="">
-                    <div class="text-bot  ">
-                        <div class=" mb-1 bold ">Microsoft OneDrive</div>
-                        <div class="mb-2">將檔案和相片儲存到 OneDrive，即可隨時隨地從任何裝置存取
+                        <source media="(max-width:540px)" srcset="./img/VP2-859x540.jpg">
+                        <source media="(max-width:860px)" srcset="./img/_VP3-1083x600.jpg">
+                        <source media="(max-width:1084px)" srcset="./img/Refresh-2_VP4-1260x600.jfif">
+                        <img class="pic " width="100%" src="./img/2_VP5-1596x600.jfif" alt="">
+                        <div class="text-bot  ">
+                            <div class=" mb-1 bold ">Microsoft OneDrive</div>
+                            <div class="mb-2">將檔案和相片儲存到 OneDrive，即可隨時隨地從任何裝置存取
+                            </div>
+                            <button class="butt">深入了解</button>
+
                         </div>
-                        <button class="butt">深入了解</button>
+                    </div>
 
+                </picture>
+
+            </section>
+            <section>
+                <div class="wrap_business">
+                    <h1 class="focus">適用於商務</h1>
+                </div>
+                <div class="bot-card df   ">
+                    <div class="p-5">
+                        <picture>
+                            <img width="100%" src="./img/333388.jfif" alt="">
+                        </picture>
+
+                        <div class="bg df jc  align-c">新上市</div>
+                        <div class="size mb-1  font">Surface Laptop Go 2 商務版</div>
+                        <div class="mb-1 ">外型時尚、方便攜帶的筆記型電腦配備絕佳的打字體驗、Windows 11 專業版和專業級效能。</div>
+                        <a class="a-1">深入了解</a>
+                    </div>
+                    <div class="p-5">
+                        <picture>
+                            <img width="100%" src="./img/8888888889.jfif" alt="">
+                        </picture>
+
+                        <div class="size mb-1 font mt">免費取得 Microsoft Teams</div>
+                        <div class="mb-1 ">線上會議、聊天和共用雲端儲存空間，盡在一處。 </div>
+                        <a class="a-1">免費註冊</a>
+                    </div>
+                    <div class="p-5">
+                        <picture>
+                            <img width="100%" src="./img/white.jfif" alt="">
+                        </picture>
+
+                        <div class="size mb-1 font mt">Microsoft 365 商務版</div>
+                        <div class="mb-1 "> 透過功能強大的應用程式提高生產力、聯繫和安全，始終領先一步。</div>
+                        <a class="a-1">立即選購</a>
+                    </div>
+                    <div class="p-5">
+                        <picture>
+                            <img width="100%" src="./img/blue.jfif" alt="">
+                        </picture>
+
+                        <div class="size mb-1  font mt">商務用 Windows 11 登場</div>
+                        <div class="mb-1 "> 專為混合式辦公而設計。 為員工帶來實用性。 為 IT 帶來一致性。 為所有人帶來安全性。 </div>
+                        <a class="a-1">深入了解</a>
                     </div>
                 </div>
+            </section>
+            <div class="FB-vo df align-c ">
+                <div class="ml-7">關注 Microsoft</div>
 
-            </picture>
-
-        </section>
-        <section>
-            <div class="wrap_business">
-                <h1 class="focus">適用於商務</h1>
-            </div>
-            <div class="bot-card df   ">
-                <div class="p-5">
-                    <picture>
-                        <img width="100%" src="./img/333388.jfif" alt="">
-                    </picture>
-
-                    <div class="bg df jc  align-c">新上市</div>
-                    <div class="size mb-1  font">Surface Laptop Go 2 商務版</div>
-                    <div class="mb-1 ">外型時尚、方便攜帶的筆記型電腦配備絕佳的打字體驗、Windows 11 專業版和專業級效能。</div>
-                    <a class="a-1">深入了解</a>
-                </div>
-                <div class="p-5">
-                    <picture>
-                        <img width="100%" src="./img/8888888889.jfif" alt="">
-                    </picture>
-
-                    <div class="size mb-1 font mt">免費取得 Microsoft Teams</div>
-                    <div class="mb-1 ">線上會議、聊天和共用雲端儲存空間，盡在一處。 </div>
-                    <a class="a-1">免費註冊</a>
-                </div>
-                <div class="p-5">
-                    <picture>
-                        <img width="100%" src="./img/white.jfif" alt="">
-                    </picture>
-
-                    <div class="size mb-1 font mt">Microsoft 365 商務版</div>
-                    <div class="mb-1 "> 透過功能強大的應用程式提高生產力、聯繫和安全，始終領先一步。</div>
-                    <a class="a-1">立即選購</a>
-                </div>
-                <div class="p-5">
-                    <picture>
-                        <img width="100%" src="./img/blue.jfif" alt="">
-                    </picture>
-
-                    <div class="size mb-1  font mt">商務用 Windows 11 登場</div>
-                    <div class="mb-1 "> 專為混合式辦公而設計。 為員工帶來實用性。 為 IT 帶來一致性。 為所有人帶來安全性。 </div>
-                    <a class="a-1">深入了解</a>
-                </div>
-            </div>
-        </section>
-        <div class="FB-vo df align-c ">
-            <div class="ml-7">關注 Microsoft</div>
-            
-            <img class="img-2" src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Facebook%202x?scl=1"
-                alt="">
-            <img class="img-2" src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/YouTube%202x?scl=1"
-                alt="">
+                <img class="img-2" src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Facebook%202x?scl=1"
+                    alt="">
+                <img class="img-2" src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/YouTube%202x?scl=1"
+                    alt="">
                 <!-- <div class="df jd w-80"><a  href="">回到頁首</a></div> -->
-        </div>
-        <div  ><div data-aos="fade-up"></div>
-            <a href="">回到頁首</a>
+            </div>
+
+            <div class="top-1" data-aos="fade-up">
+
+                <a href="">回到頁首</a>
+            </div>
         </div>
 
         <div class="nav-row">
@@ -421,7 +431,8 @@
 
             </div>
             <div class="mt-2 inner-nav-row mx-auto df jc-sp df-wrap footer-wrap">
-                <div class="size-1 baseline color-61 footer-one"><a class="color-61" href=""><i class="fa-solid fa-earth-americas"></i>
+                <div class="size-1 baseline color-61 footer-one"><a class="color-61" href=""><i
+                            class="fa-solid fa-earth-americas"></i>
                         中文(台灣)</a></div>
                 <div class="size-1 baseline color-61 df df-wrap footer-two">
                     <div class="footer-item"><a class="color-61" href="">連絡 Microsoft</a></div>
@@ -435,23 +446,27 @@
         </div>
     </div>
 
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script>
+        var swiper = new Swiper(".mySwiper", {
+            slidesPerView: 1,
+            spaceBetween: 30,
+            loop: true,
+            pagination: {
+                el: ".swiper-pagination",
+                clickable: true,
+            },
+            navigation: {
+                nextEl: ".swiper-button-next",
+                prevEl: ".swiper-button-prev",
+            },
+        });
+    </script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 
 </body>
-<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-<script>
-    var swiper = new Swiper(".mySwiper", {
-        slidesPerView: 1,
-        spaceBetween: 30,
-        loop: true,
-        pagination: {
-            el: ".swiper-pagination",
-            clickable: true,
-        },
-        navigation: {
-            nextEl: ".swiper-button-next",
-            prevEl: ".swiper-button-prev",
-        },
-    });
-</script>
 
 </html>
