--- a/mf.html
+++ b/mf.html
@@ -271,9 +271,17 @@
 
                     <div class="c size font">Microsoft 365</div>
                     <div class="c ">進階版 Office 應用程式、額外的雲端儲存空間、進階安全性等功能，全都在一個方便的訂閱中。</div>
-                    <a class="a-1">最多可供 6 人使用  </a>&emsp;&emsp;&emsp;&emsp;&emsp;
-                    <a class="six a-1"> 適合 1 人使用</a>
-
+                    <div class="df">
+                        <a class="a-1" style="width:50%">
+                            最多可供 6 人使用 
+                            <span class="Delay" > ></span> 
+                        </a>
+                        &emsp;&emsp;&emsp;&emsp;&emsp;
+                        <a class="six a-1" style="width:50%"> 
+                            適合 1 人使用
+                            <span class="Delay" > ></span>
+                        </a>
+                    </div>
 
 
                 </div>
@@ -296,7 +304,7 @@
 
                     <div class="c size font">Microsoft Edge</div>
                     <div class="c">在您瀏覽時提供世界級的效能，以及更多的隱私、更充足的生產力與更高的價值。</div>
-                    <a class="a-1"> 立即下載</a>
+                    <a class="a-1"> 立即下載</a> <span class="Delay" > ></span>
                 </div>
                 <div class="card-4">
                     <picture>
@@ -307,10 +315,10 @@
                     <div class="c  ml-2">加入 Xbox Game Pass Ultimate 或 PC Game Pass 只要 NT$30，解鎖數百款精彩遊戲。
                         此優惠僅適用於新訂閱者。
                     </div>
-                    <a class="ml-2  a-1">加入 PC Game Pass</a>
+                    <a class="ml-2  a-1">加入 PC Game Pass</a><span class="Delay" > ></span>
                     <br>
 
-                    <a class="ml-2 mt-2 a-1">加入 Game Pass Ultimate</a>
+                    <a class="ml-2 mt-2 a-1">加入 Game Pass Ultimate</a><span class="Delay" > ></span>
 
                 </div>
 
@@ -350,7 +358,7 @@
                         <div class="bg df jc  align-c">新上市</div>
                         <div class="size mb-1  font">Surface Laptop Go 2 商務版</div>
                         <div class="mb-1 ">外型時尚、方便攜帶的筆記型電腦配備絕佳的打字體驗、Windows 11 專業版和專業級效能。</div>
-                        <a class="a-1">深入了解</a>
+                        <a class="a-1">深入了解</a><span class="Delay" > ></span>
                     </div>
                     <div class="p-5">
                         <picture>
@@ -359,7 +367,7 @@
 
                         <div class="size mb-1 font mt">免費取得 Microsoft Teams</div>
                         <div class="mb-1 ">線上會議、聊天和共用雲端儲存空間，盡在一處。 </div>
-                        <a class="a-1">免費註冊</a>
+                        <a class="a-1">免費註冊</a><span class="Delay" > ></span>
                     </div>
                     <div class="p-5">
                         <picture>
@@ -368,7 +376,7 @@
 
                         <div class="size mb-1 font mt">Microsoft 365 商務版</div>
                         <div class="mb-1 "> 透過功能強大的應用程式提高生產力、聯繫和安全，始終領先一步。</div>
-                        <a class="a-1">立即選購</a>
+                        <a class="a-1">立即選購</a><span class="Delay" > ></span>
                     </div>
                     <div class="p-5">
                         <picture>
@@ -377,7 +385,7 @@
 
                         <div class="size mb-1  font mt">商務用 Windows 11 登場</div>
                         <div class="mb-1 "> 專為混合式辦公而設計。 為員工帶來實用性。 為 IT 帶來一致性。 為所有人帶來安全性。 </div>
-                        <a class="a-1">深入了解</a>
+                        <a class="a-1">深入了解</a><span class="Delay" > ></span>
                     </div>
                 </div>
             </section>
