--- a/mf.html
+++ b/mf.html
@@ -40,11 +40,11 @@
     <div>
         <div class="container">
             <div class="nav-wrap df jc align-c">
-                <div class="box df jc align-c nav-logo bg-black">
+                <div class="box df jc align-c nav-logo ">
                     <img class="logo"
                         src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1Mu3b?ver=5c31">
                 </div>
-                <div class="box nav-left bg-red">
+                <div class="box nav-left ">
                     <ul class="w-full df df-wrap js">
                         <li>Microsoft365</li>
                         <li>office</li>
